# rust-full-stack-demo

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/frontend/: Cargo.toml  README.md  index.html
crates/frontend/src/: api.rs  main.rs
crates/frontend/src/components/: mod.rs
crates/rpc/: Cargo.toml  README.md  build.rs
crates/rpc/src/: lib.rs
crates/rpc/src/generated_full/: example.rs
crates/tonic-web-client/: Cargo.toml  README.md
crates/tonic-web-client/src/: client.rs  error.rs  lib.rs
proto/: example.proto
