[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
rpc = { version = "0.1.0", path = "../rpc", features = ["server"] }
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread"] }
tonic-web = "0.3"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"], default-features = false }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
