[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
rpc = { version = "0.1.0", path = "../rpc" }
tonic-web-client = { version = "0.1.0", path = "../tonic-web-client" }
