[package]
name = "tonic-web-client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
base64 = "0.13.0"
bytes = "1.1.0"
futures-core = "0.3.21"
http = "0.2.7"
http-body = "0.4.5"
httparse = "1.7.1"
reqwest = { version = "0.11.10", default-features = false }
thiserror = "1.0.31"
tonic = { version = "0.7.2", default-features = false }
tower = { version = "0.4.12", default-features = false }
tracing = "0.1.35"
url = "2.2.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.30"
